--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <div class="app-container bg-white">
+  <p-toast
+    [showTransformOptions]="'translateY(100%)'"
+    [showTransitionOptions]="'500ms'"
+    [hideTransitionOptions]="'500ms'"
+    [showTransformOptions]="'translateX(100%)'"
+  />
   <router-outlet></router-outlet>
 </div>
