--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="platformService.isBrowser()">
-  <p-megamenu [model]="items" styleClass="custom-megamenu">
+  <p-megamenu [model]="items()" styleClass="custom-megamenu">
     <ng-template #start>
       <p-avatar
         [routerLink]="'/tong-quan'"
