--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,4 +1,4 @@
-<app-breadcumb [items]="items" />
+<app-breadcumb [items]="items()" />
 <p-panel styleClass="about-panel" header="Giới thiệu">
   <p>
     Nhật Minh Food là đơn vị cung cấp nguyên liệu pha chế, dụng cụ - máy móc và
