--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,7 +1,8 @@
+<app-breadcumb [items]="items()" />
 <div class="flex flex-col my-4 gap-4">
   <div class="grid grid-cols-4 gap-4">
     <app-product-card
-      *ngFor="let product of products"
+      *ngFor="let product of products()"
       [product]="product"
       [className]="'h-full'"
     />
