--- a/src/app/pages/project/project.component.html
+++ b/src/app/pages/project/project.component.html
@@ -1,4 +1,4 @@
-<app-breadcumb [items]="items" />
+<app-breadcumb [items]="items()" />
 <p-stepper [value]="1" class="basis-[50rem]">
   <p-step-list>
     <p-step [value]="1">Các thành phần của Qolo Platform</p-step>
