--- a/src/app/pages/consulting/consulting.component.html
+++ b/src/app/pages/consulting/consulting.component.html
@@ -1,4 +1,4 @@
-<app-breadcumb [items]="items" />
+<app-breadcumb [items]="items()" />
 <p-panel styleClass="consulting-panel" header="Tư vấn thiết kế">
   <p>
     Nhật Minh Food là đơn vị cung cấp nguyên liệu pha chế, dụng cụ - máy móc và
