--- a/src/app/pages/training/training.component.html
+++ b/src/app/pages/training/training.component.html
@@ -1,4 +1,4 @@
-<app-breadcumb [items]="items" />
+<app-breadcumb [items]="items()" />
 <p-panel styleClass="training-panel" header="Đào tạo">
   <p>
     Nhật Minh Food là đơn vị cung cấp nguyên liệu pha chế, dụng cụ - máy móc và
