--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="platformService.isBrowser()">
+<div>
   <p-megamenu [model]="items()" styleClass="custom-megamenu">
     <ng-template #start>
       <p-avatar
