--- a/src/app/layouts/landing-layout/landing-layout.component.html
+++ b/src/app/layouts/landing-layout/landing-layout.component.html
@@ -18,7 +18,7 @@
         [rounded]="true"
         severity="secondary"
         size="large"
-        routerLink="/trang-chu"
+        routerLink="/"
         styleClass="px-8"
       />
       <p-button
@@ -26,7 +26,7 @@
         [rounded]="true"
         severity="primary"
         size="large"
-        routerLink="/trang-chu/lien-he"
+        routerLink="/lien-he"
         styleClass="px-8"
       />
     </div>
